# stateref

./: stateref.cabal
src/Data/: Accessor.hs  MRef.hs  StateRef.hs
src/Data/MRef/: Classes.hs  Instances.hs  Types.hs
src/Data/MRef/Instances/: STM.hs
src/Data/StateRef/: Classes.hs  Instances.hs  Types.hs
src/Data/StateRef/Instances/: STM.hs  Undecidable.hs
