name:                   stateref
version:                0.2
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>

description:            A type-class generalizing the read\/write\/modify
                        operations for stateful variables

Flag useSTM
  Description:          Include instances for STM types
  Default:              True

Flag useTMVar
  Description:          Include instances for TMVar (TMVar not available
                        in hugs' stm implementation).  I have been unable to
                        make this flag's value depend on whether or not
                        you're running hugs, so if you are, you'll just have
                        to change it manually.  It'd sure be nice if there
                        were either an explicit backtrack command in cabal
                        or if 'buildable:false' would trigger a backtrack.
  Default:              True

Library
  hs-source-dirs:       src
  extensions:           CPP
  exposed-modules:      Data.StateRef
                        Data.StateRef.Classes
                        Data.StateRef.Instances
                        Data.MRef
                        Data.MRef.Classes
                        Data.MRef.Instances
  if flag(useSTM)
    exposed-modules:    Data.StateRef.Instances.STM
                        Data.MRef.Instances.STM
    cpp-options:        -DuseSTM
    
    if flag(useTMVar)
      cpp-options:      -DuseTMVar
      
      if impl(hugs)
        buildable:      False
    
  build-depends:        base >= 3
  if flag(useSTM)
    build-depends:      stm
